--- a/package.json
+++ b/package.json
@@ -31,7 +31,15 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^17.0.35",
     "@types/pino": "^7.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.2",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.7.2"
+    "typescript": "*"
   }
 }
