--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.2",
+    "prettier": "^2.6.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "*"
   }
