--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,15 @@
       {
         "checksConditionals": false
       }
-    ]
+    ],
+    "@typescript-eslint/explicit-function-return-type": [
+      "warn",
+      {
+        "allowExpressions": true,
+        "allowTypedFunctionExpressions": true,
+        "allowHigherOrderFunctions": true
+      }
+    ],
+    "@typescript-eslint/indent": "off"
   }
 }
