--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "trailingComma": "all",
-  "semi": false,
-  "singleQuote": true
+    "trailingComma": "none",
+    "semi": false,
+    "singleQuote": true,
+    "bracketSpacing": true
 }
