--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
-    "trailingComma": "none",
-    "semi": false,
-    "singleQuote": true,
-    "bracketSpacing": true
+  "trailingComma": "none",
+  "semi": false,
+  "singleQuote": true
 }
