:construction: | Working on a lot of things

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,8 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/indent": "off",
     "space-before-function-paren": "off",
-    "@typescript-eslint/space-before-function-paren": "off"
+    "@typescript-eslint/space-before-function-paren": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
