--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "lint": "eslint --ext .ts src",
+    "prettier": "prettier --write '**/*.{ts,json}'"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
